Add support of GWT-RPC's field serializers that have no native (JSNI) methods but use the one that has (due to inheritance).